Auto stash before merge of "master" and "origin/master"

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="stylesheet.css">
+    <style>
+      container{
+        text-align: center;
+      }
+    </style>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
@@ -8,14 +14,11 @@
     <!-- MDB icon -->
     <link rel="icon" href="img/mdb-favicon.ico" type="image/x-icon" />
     <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css" />
+
     <!-- Google Fonts Roboto -->
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap"
-    />
+
     <!-- MDB -->
-    <link rel="stylesheet" href="css/mdb.min.css" />
+
   </head>
   <body>
     <!-- Start your project here-->
@@ -24,9 +27,10 @@
         <div class="text-center">
           <img
             class="mb-4"
-            src="{{url_for('static',https://mdbootstrap.com/img/logo/mdb-transparent-250px.png)}}"
-            style="width: 250px; height: 90px"
+            src="https://mdbootstrap.com/img/logo/mdb-transparent-250px.png"
           />
+            <!--style="width: 250px; height: 90px"-->
+
           <h5 class="mb-3">Thank you for using our product. We're glad you're with us.</h5>
           <p class="mb-3">MDB Team</p>
           <a
@@ -42,8 +46,9 @@
     <!-- End your project here-->
 
     <!-- MDB -->
-    <script type="text/javascript" src="js/mdb.min.js"></script>
+
     <!-- Custom scripts -->
-    <script type="text/javascript"></script>
+
+    <script>type="text/javascript", src="jc.js" </script>
   </body>
 </html>
