--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="stylesheet.css">
+    <link rel="stylesheet" href="Frontend/stylesheet.css">
     <style>
-      container{
-        text-align: center;
-      }
+
     </style>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
